--- a/style/style.css
+++ b/style/style.css
@@ -36,8 +36,29 @@ header {
     vertical-align: middle;
 }
 
+#Sobre {
+    font-family: 'Montserrat Alternates', sans-serif;
+    color: whitesmoke;
+    width: 100%;
+    height: 50%;
+    display: flex;
+}
+
+#sobre-img {
+    width: 15%;
+    align-items: center;
+}
+
 #logo {
-    padding-left: 2px;
-    padding-top: 4px;
+    padding-left: 10px;
+    padding-top: 7.5%;
     border-radius: 50%;
+}
+
+#sobre-text {
+    text-align: justify;
+    font-size: large;
+    width: 85%;
+    margin-right: 10px;
+    margin-top: 3%;
 }
