--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,7 @@ hr {
     border-width: 4px;
     border-style: solid;
     border-radius: 2vw;
+    margin-top: 15px;
     margin-left: 8px;
     margin-right: 8px;
     text-align: center;
@@ -101,13 +102,15 @@ hr {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
+    justify-content: center;
 }
 
 .team-pic{
+    padding-left: 4px;
     width: 200px;
     border-radius: 50%;
 }
 
 .team-name{
-
+    padding-left: 15px;
 }
