--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
+    height: 5vw;
     width: 100%;
 }
 
@@ -24,7 +24,7 @@ hr {
     color: whitesmoke;
     background-color: whitesmoke;
     border-color: whitesmoke;
-    height: 0.3px;
+    height: 0.1vw;
     width: 95%;
     
 }
@@ -33,7 +33,7 @@ hr {
     color: whitesmoke;
     background-color: whitesmoke;
     border-color: whitesmoke;
-    height: 0.3px;
+    height: 0.1vw;
     width: 90%;
 }
 
@@ -50,7 +50,7 @@ hr {
 }
 
 .link-externo img {
-    height: 75px;
+    height: 4.5vw;
     
     vertical-align: middle;
 }
@@ -68,7 +68,7 @@ hr {
 }
 
 #logo {
-    padding-left: 10px;
+    padding-left: 1vw;
     padding-top: 7.5%;
     border-radius: 50%;
 }
@@ -77,7 +77,7 @@ hr {
     text-align: justify;
     font-size: large;
     width: 85%;
-    margin-right: 10px;
+    margin-right: 1vw;
     margin-top: 3%;
 }
 
@@ -86,10 +86,10 @@ hr {
     border-width: 4px;
     border-style: solid;
     border-radius: 2vw;
-    margin-top: 15px;
-    margin-left: 8px;
-    margin-right: 8px;
-    margin-bottom: 15px;
+    margin-top: 1vw;
+    margin-left: 0.75vw;
+    margin-right: 0.75vw;
+    margin-bottom: 1vw;
     text-align: center;
 }
 
@@ -103,13 +103,13 @@ hr {
     width: 90%;
     margin-right: auto;
     margin-left: auto;
-    padding-bottom: 15px;
+    padding-bottom: 1vw;
     justify-content: space-around;
     
 }
 
 .team-pic{
-    width: 200px;
+    width: 12vw;
     border-radius: 50%;
 }
 
@@ -121,5 +121,5 @@ footer{
 }
 
 footer div {
-    padding-bottom: 15px
+    padding-bottom: 1vw;
 }
