--- a/style/style.css
+++ b/style/style.css
@@ -56,10 +56,11 @@ hr {
 }
 
 #Sobre {
-    
+    padding-top: 1vw;
     width: 100%;
     height: 50%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 15% 85%;
 }
 
 #sobre-img {
