--- a/style/style.css
+++ b/style/style.css
@@ -60,11 +60,10 @@ hr {
     width: 100%;
     height: 50%;
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 14vw 84vw;
 }
 
 #sobre-img {
-    width: 15%;
     align-items: center;
 }
 
@@ -77,7 +76,6 @@ hr {
 #sobre-text {
     text-align: justify;
     font-size: large;
-    width: 85%;
     margin-right: 1vw;
     margin-top: 3%;
 }
